# py-metabolic-modelling

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: cyano_growth_media.py
